Dummy_Package_for_scratch_org/main/default/objects/User/fields/API_URL__c.field-meta.xml
<CustomField>
    <fullName>API_URL__c</fullName>
    <formula>$Api.Partner_Server_URL_290</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>API_URL</label>
    <type>Text</type>
</CustomField>