Dummy_Package_for_scratch_org/main/default/objects/User/fields/Hide_Copado_feedback__c.field-meta.xml
<CustomField>
    <fullName>Hide_Copado_feedback__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The visibility of the message asking users to rate &amp; feedback Copado on the AppExchange is controlled here.</inlineHelpText>
    <label>Hide Copado feedback</label>
    <type>Checkbox</type>
</CustomField>