Dummy_Package_for_scratch_org/main/default/objects/User/fields/Show_Copado_Tips__c.field-meta.xml
<CustomField>
    <fullName>Show_Copado_Tips__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Copado Tips</label>
    <type>Checkbox</type>
</CustomField>