Dummy_Package_for_scratch_org/main/default/objects/User/fields/Work_Manager_Panels__c.field-meta.xml
<CustomField>
    <fullName>Work_Manager_Panels__c</fullName>
    <description>JSON containing current user panels on the Backlog</description>
    <label>Work Manager Panels</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>