Dummy_Package_for_scratch_org/main/default/objects/User/listViews/AdminUsers.listView-meta.xml
<ListView>
    <fullName>AdminUsers</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>System Administrator,Test Admin</value>
    </filters>
    <label>Admin Users</label>
    <language>en_US</language>
</ListView>